@@ -5,7 +5,6 @@
   
   (c)  1997--2002 Han-Wen Nienhuys <hanwen@cs.uu.nl>
   Jan Nieuwenhuizen <janneke@gnu.org>
-  
 */
 
 /*
