@@ -3,8 +3,7 @@
   
   source file of the GNU LilyPond music typesetter
   
-  (c) 1999--2000 Han-Wen Nienhuys <hanwen@cs.uu.nl>
-  
+  (c) 1999--2002 Han-Wen Nienhuys <hanwen@cs.uu.nl>
  */
 
 #ifndef LY_SMOBS_ICC
